# virgilio

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/observer/: observer.py
src/virgilio/: __init__.py  detector.py  events.py  main.py  scan.py  virgilio.py
tests/: test_cli.py  test_detector.py  test_event_type.py  test_graceful_shutdown.py  test_notify_dispatch.py  test_readme.py  test_run_loop.py  test_scan.py  test_virgilio_hooks.py
